<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:gravity="center_vertical">

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/answer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/instructions"
        android:textSize="45sp"
        android:gravity="center"/>
    </LinearLayout> <!-- this is the title of the app -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="11">

        <TextView
            android:id="@+id/left_num"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/questionMark"
            android:textSize="50sp"
            android:layout_weight="5"
            android:gravity="center"/>

        <ImageView
            android:id="@+id/users_choice"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:src="@drawable/question_solid"
            android:contentDescription="@string/QM"
            android:layout_gravity="center_vertical"/>

        <TextView
            android:id="@+id/right_num"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/questionMark"
            android:textSize="50sp"
            android:layout_weight="5"
            android:gravity="center"/>
    </LinearLayout> <!-- this is the row that shows the equation -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="13">
        <Space
            android:layout_width="15dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <ImageButton
            android:id="@+id/less_than"
            android:layout_width="0px"
            android:layout_height="120dp"
            android:background="@drawable/less_than_solid"
            android:contentDescription="@string/lessThan"
            android:layout_weight="3"
            android:onClick="userChoose"/>
        <Space
            android:layout_width="15dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <ImageButton
            android:id="@+id/equals_to"
            android:layout_width="0px"
            android:layout_height="120dp"
            android:background="@drawable/equals_solid"
            android:contentDescription="@string/equalsTo"
            android:layout_weight="3"
            android:onClick="userChoose"/>
        <Space
            android:layout_width="15dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <ImageButton
            android:id="@+id/greater_than"
            android:layout_width="0px"
            android:layout_height="120dp"
            android:background="@drawable/greater_than_solid"
            android:contentDescription="@string/greaterThan"
            android:layout_weight="3"
            android:onClick="userChoose"/>
        <Space
            android:layout_width="15dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
    </LinearLayout> <!-- this is the row that shows the possible signs -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="12">
        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2"/>
        <Button
            android:id="@+id/next_nums"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:text="@string/buttonTXT"
            android:textSize="35sp"
            android:backgroundTint="@color/darkYellow"
            android:textAllCaps="false"
            android:onClick="makeNumbers"/>
        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2"/>
    </LinearLayout> <!-- this is the row of the "Next Numbers" button -->
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="12">
            <Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" />
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="4">
                <RadioButton
                    android:id="@+id/smallest_range"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/small_range"
                    android:textSize="25sp"
                    android:onClick="makeRange"/>
                <RadioButton
                    android:id="@+id/medium_range"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/medium_range"
                    android:textSize="25sp"
                    android:onClick="makeRange"/>
                <RadioButton
                    android:id="@+id/largest_range"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/large_range"
                    android:textSize="25sp"
                    android:onClick="makeRange"/>
            </RadioGroup>
            <Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="2" />
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="4">
                <CheckBox
                    android:id="@+id/bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bold"
                    android:textSize="25sp"
                    android:onClick="toggleBold"/>
                <CheckBox
                    android:id="@+id/colors"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/colors"
                    android:textSize="25sp"
                    android:onClick="toggleColors"/>
            </RadioGroup>
            <Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

        </LinearLayout> <!-- this is the row of the radio buttons and checkboxes -->

</LinearLayout>